3.0 regression: opening folder broken

Steps:

  • Make sure the playlist is not empty.
  • Make sure the player is currently playing an item in the playlist.
  • Open a folder with recent or open folder menus.
  • VLC appends the folder content to the playlist. Expected result:
  • The folder starts playing from the first file in the folder. Actual result:
  • (Most often) VLC starts playing the first item in the playlist.

Not tested on other UI.