input: handle recursive parsing in preparser

Add i_preparse_depth in input_item to handle how many level of sub items can be
parsed.

The "recursive" option is now moved from access/file to the playlist category.

You can now abort a long local directory opening.

NET items won't be parsed recursively since playlist_preparser_Push is not
called with the META_REQUEST_OPTION_SCOPE_NETWORK argument.

Fixes #13850
Fixes #11921
Fixes #13872

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>